--- a/BeberguaLembrete/app/src/main/res/values/strings.xml
+++ b/BeberguaLembrete/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="txt_hora">00</string>
     <string name="txt_dois_pontos">:</string>
     <string name="txt_minutos">00</string>
+    <string name="toast_informe_idade">Informe sua idade</string>
+    <string name="toast_informe_peso">Informe seu peso</string>
+    <string name="dialogo_titulo">Redefinir dados</string>
+    <string name="dialogo_desc">Deseja excluir todos os dados existentes?</string>
 </resources>
